k8s/staging/platform-sync-service-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  labels:
    app: platform-sync-service
    service-type: platform-service
  name: platform-sync-service-dr
  namespace: iacherie-staging
spec:
  host: platform-sync-service.iacherie-staging.svc.cluster.local
  trafficPolicy:
    circuitBreaker:
      baseEjectionTime: 30s
      consecutive5xxErrors: 5
      consecutiveGatewayErrors: 5
      interval: 30s
      maxEjectionPercent: 50
    connectionPool:
      http:
        connectTimeout: 30s
        http1MaxPendingRequests: 50
        http2MaxRequests: 100
        maxRequestsPerConnection: 10
        maxRetries: 3
      tcp:
        maxConnections: 100
    loadBalancer:
      simple: LEAST_CONN
    tls:
      mode: ISTIO_MUTUAL
